<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    android:gravity="center">

    <EditText
        android:id="@+id/etNombre"
        android:layout_width="378dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_nombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etEdad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_edad"
        android:inputType="number" />

    <Switch
        android:id="@+id/switchRecordar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Recordar nombre" />

    <Button
        android:id="@+id/btnSaludar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_saludar"
        android:layout_marginTop="16dp"/>

    <Button
        android:id="@+id/btnLimpiar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_limpiar"
        android:layout_marginTop="8dp"/>



    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_resultado"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="16dp" />

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Salir"
        android:layout_marginTop="8dp"/>

</LinearLayout>
